// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardCore > renders correct HTML structure (article, subtle, dividers) 1`] = `
"<article class="card-core subtle has-dividers">
  <div class="card-row card-row-header">
    <h2>Title</h2>
  </div>
  <div class="card-row card-row-body">
    <p>Content</p>
  </div>
</article>"
`;

exports[`CardCore > renders correct HTML structure (default) 1`] = `
"<div class="card-core solid">
  <div class="card-row card-row-header">
    <h2>Title</h2>
  </div>
  <div class="card-row card-row-body">
    <p>Content</p>
  </div>
  <div class="card-row card-row-footer">
    <p>Footer</p>
  </div>
</div>"
`;

exports[`CardCore > renders correct HTML structure with styleClassPassthrough 1`] = `"<div class="card-core solid featured-card"></div>"`;

exports[`CardCore > renders correctly with all props and slots combined 1`] = `
"<article class="card-core soft featured-card has-dividers no-outline">
  <div class="card-row card-row-header">
    <h2>Title</h2>
  </div>
  <div class="card-row card-row-media"><img src="x.jpg" alt=""></div>
  <div class="card-row card-row-body">
    <p>Content</p>
  </div>
  <div class="card-row card-row-footer">
    <p>Footer</p>
  </div>
</article>"
`;
